--- a/GenerateDatabase/App.config
+++ b/GenerateDatabase/App.config
@@ -1,15 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    
+
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
-  <connectionStrings>    
-  <!--<add name="ConstructionSiteEntities" connectionString="metadata=res://*/Entity.ConstructionEntity.csdl|res://*/Entity.ConstructionEntity.ssdl|res://*/Entity.ConstructionEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=201ThuanNH2;initial catalog=ConstructionSite;persist security info=True;user id=sa;password=asdf1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-  <add name="ConstructionSiteEntities" connectionString="metadata=res://*/Entity.ConstructionSite.csdl|res://*/Entity.ConstructionSite.ssdl|res://*/Entity.ConstructionSite.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=201THUANNH2;initial catalog=ConstructionSite;persist security info=True;user id=sa;password=yuiop67890);multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <!--<add name="ConstructionSiteEntities" connectionString="metadata=res://*/Entity.ConstructionEntity.csdl|res://*/Entity.ConstructionEntity.ssdl|res://*/Entity.ConstructionEntity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=201ThuanNH2;initial catalog=ConstructionSite;persist security info=True;user id=sa;password=asdf1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <!--<add name="ConstructionSiteEntities" connectionString="metadata=res://*/Entity.ConstructionSite.csdl|res://*/Entity.ConstructionSite.ssdl|res://*/Entity.ConstructionSite.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=201THUANNH2;initial catalog=ConstructionSite;persist security info=True;user id=sa;password=yuiop67890);multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="ConstructionSiteEntities" connectionString="metadata=res://*/Entity.ConstructionSite.csdl|res://*/Entity.ConstructionSite.ssdl|res://*/Entity.ConstructionSite.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLExpress;initial catalog=ConstructionSite;persist security info=True;user id=sa;password=asdf1234;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
