Doanh HN - update OrderDetails

--- a/170516/170516.csproj
+++ b/170516/170516.csproj
@@ -279,6 +279,7 @@
     <Content Include="Content\font-awesome\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\font-awesome\HELP-US-OUT.txt" />
     <Content Include="Content\Image\image_placeholder.jpg" />
+    <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="Scripts\Admin\customer.js" />
@@ -1387,6 +1388,7 @@
     <Content Include="Scripts\jquery-2.2.3.js" />
     <Content Include="Scripts\jquery-2.2.3.min.js" />
     <Content Include="Scripts\jquery-2.2.3.min.map" />
+    <Content Include="Scripts\jquery-ui.js" />
     <Content Include="Scripts\jquery-upload\cors\jquery.postmessage-transport.js" />
     <Content Include="Scripts\jquery-upload\cors\jquery.xdr-transport.js" />
     <Content Include="Scripts\jquery-upload\jquery.fileupload-angular.js" />
