--- a/170516/170516.csproj
+++ b/170516/170516.csproj
@@ -1640,6 +1640,7 @@
     <Content Include="Scripts\tinymce\langs\readme.md" />
     <Content Include="Views\Administrator\ViewOrderDetails.cshtml" />
     <Content Include="Views\Administrator\_PartialSpecificationTable.cshtml" />
+    <Content Include="Views\Product\_PartialViewCategory.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
