--- a/170516/170516.csproj
+++ b/170516/170516.csproj
@@ -214,6 +214,9 @@
     <Compile Include="Entities\ProductDetail.cs">
       <DependentUpon>ConstructionEntity.tt</DependentUpon>
     </Compile>
+    <Compile Include="Entities\Request.cs">
+      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Role.cs">
       <DependentUpon>ConstructionEntity.tt</DependentUpon>
     </Compile>
@@ -230,6 +233,9 @@
       <DependentUpon>ConstructionEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="Entities\sysdiagram.cs">
+      <DependentUpon>ConstructionEntity.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\SystemVariable.cs">
       <DependentUpon>ConstructionEntity.tt</DependentUpon>
     </Compile>
     <Compile Include="Global.asax.cs">
@@ -251,11 +257,13 @@
     <Compile Include="Models\Administrator\ViewOrderModel.cs" />
     <Compile Include="Models\Administrator\ViewProductCategoryModel.cs" />
     <Compile Include="Models\Administrator\ViewProductModel.cs" />
+    <Compile Include="Models\Administrator\ViewRequestItem.cs" />
     <Compile Include="Models\Administrator\ViewShipperModel.cs" />
     <Compile Include="Models\Administrator\ViewSupplierModel.cs" />
     <Compile Include="Models\CategoryIndexModel.cs" />
     <Compile Include="Models\Constant.cs" />
     <Compile Include="Models\ProductIndexModel.cs" />
+    <Compile Include="Models\RequestContactModel.cs" />
     <Compile Include="Models\SubCategoryModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -273,6 +281,7 @@
     <Content Include="Content\Admin\css\stats.css" />
     <Content Include="Content\Admin\css\styles.css" />
     <Content Include="Content\Admin\images\facebook.png" />
+    <Content Include="Content\Construction-Company.jpg" />
     <Content Include="Content\dlMenu\css\component.css" />
     <Content Include="Content\dlMenu\fonts\license.txt" />
     <Content Include="Content\font-awesome\css\font-awesome.css" />
@@ -281,6 +290,7 @@
     <Content Include="Content\font-awesome\HELP-US-OUT.txt" />
     <Content Include="Content\Image\image_placeholder.jpg" />
     <Content Include="Content\jquery-ui.css" />
+    <Content Include="Content\slippry.css" />
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="Entities\ConstructionEntity.Context.tt">
@@ -300,6 +310,7 @@
     <Content Include="Scripts\Admin\js\forms.js" />
     <Content Include="Scripts\Admin\category.js" />
     <Content Include="Scripts\Admin\order.js" />
+    <Content Include="Scripts\Admin\request.js" />
     <Content Include="Scripts\Admin\shipper.js" />
     <Content Include="Scripts\Admin\supplier.js" />
     <Content Include="Scripts\bootbox.min.js" />
@@ -1413,6 +1424,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\slippry.min.js" />
     <Content Include="Scripts\tinymce\jquery.tinymce.min.js" />
     <Content Include="Scripts\tinymce\license.txt" />
     <Content Include="Scripts\tinymce\plugins\advlist\plugin.js" />
@@ -1641,10 +1653,13 @@
     <Content Include="Views\Administrator\ViewOrderDetails.cshtml" />
     <Content Include="Views\Administrator\_PartialSpecificationTable.cshtml" />
     <Content Include="Views\Product\_PartialViewCategory.cshtml" />
+    <Content Include="Views\Administrator\ViewRequest.cshtml" />
+    <Content Include="Views\Administrator\ViewRequestDetail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Base\" />
+    <Folder Include="Views\Contact\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
