--- a/170516/170516.csproj
+++ b/170516/170516.csproj
@@ -292,27 +292,31 @@
     <Content Include="Content\font-awesome\css\font-awesome.min.css" />
     <Content Include="Content\font-awesome\fonts\fontawesome-webfont.svg" />
     <Content Include="Content\font-awesome\HELP-US-OUT.txt" />
+    <Content Include="Content\font\slick\slick.svg" />
     <Content Include="Content\full-slider.css" />
     <Content Include="Content\fullwidth-list\component.css" />
     <Content Include="Content\fullwidth-list\default.css" />
+    <Content Include="Content\Image\ajax-loader.gif" />
     <Content Include="Content\Image\cat.jpg" />
-    <Content Include="Content\Image\slider\ajax-loader.gif" />
-    <Content Include="Content\Image\slider\arrow_left.png" />
-    <Content Include="Content\Image\slider\arrow_right.png" />
-    <Content Include="Content\Image\slider\gradient.png" />
-    <Content Include="Content\Image\slider\steel_1.jpg" />
-    <Content Include="Content\Image\slider\wood_1.jpg" />
     <Content Include="Content\Image\image_placeholder.jpg" />
-    <Content Include="Content\Image\slider\wood_2.JPG" />
-    <Content Include="Content\Image\slider\wood_3.jpg" />
+    <Content Include="Content\Image\slider\1.png" />
+    <Content Include="Content\Image\slider\2.png" />
+    <Content Include="Content\Image\slider\3.png" />
+    <Content Include="Content\Image\slider\4.png" />
+    <Content Include="Content\Image\slider\arrows.png" />
+    <Content Include="Content\Image\slider\bg.png" />
+    <Content Include="Content\Image\slider\ImageAttribution.txt" />
+    <Content Include="Content\Image\slider\waves.gif" />
+    <Content Include="Content\Image\square-image-placeholder.png" />
     <Content Include="Content\jquery-ui.css" />
+    <Content Include="Content\owl.carousel\grabbing.png" />
+    <Content Include="Content\owl.carousel\owl.carousel.css" />
+    <Content Include="Content\owl.carousel\owl.theme.css" />
+    <Content Include="Content\owl.carousel\owl.transitions.css" />
+    <Content Include="Content\parallax_slider.css" />
+    <Content Include="Content\slick-theme.css" />
+    <Content Include="Content\slick.css" />
     <Content Include="Content\slippry.css" />
-    <Content Include="Content\maxImage\bootstrap.min.css" />
-    <Content Include="Content\maxImage\ie.css" />
-    <Content Include="Content\maxImage\jquery.maximage.css" />
-    <Content Include="Content\maxImage\jquery.maximage.min.css" />
-    <Content Include="Content\maxImage\print.css" />
-    <Content Include="Content\maxImage\screen.css" />
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="Entities\ConstructionEntity.Context.tt">
@@ -1408,7 +1412,6 @@
     <Content Include="Content\dlMenu\fonts\icomoon.svg" />
     <Content Include="Content\dlMenu\fonts\icomoon.ttf" />
     <Content Include="Content\dlMenu\fonts\icomoon.woff" />
-    <Content Include="Content\Image\loading.svg" />
     <Content Include="Content\bootstrap-select\bootstrap-select.css.map" />
     <EntityDeploy Include="Entities\ConstructionEntity.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
@@ -1417,10 +1420,21 @@
     <Content Include="Entities\ConstructionEntity.edmx.diagram">
       <DependentUpon>ConstructionEntity.edmx</DependentUpon>
     </Content>
+    <Content Include="Content\Image\slider\Thumbs.db" />
+    <Content Include="Content\font\slick\slick.eot" />
+    <Content Include="Content\font\slick\slick.ttf" />
+    <Content Include="Content\font\slick\slick.woff" />
     <None Include="Scripts\jquery-2.2.3.intellisense.js" />
     <Content Include="Scripts\dlMenu\custom.dlmenu.js" />
     <Content Include="Scripts\dlMenu\modernizr.custom.js" />
     <Content Include="Scripts\Home\index.js" />
+    <Content Include="Scripts\inputmask.date.extensions.js" />
+    <Content Include="Scripts\inputmask.dependencyLib.jquery.js" />
+    <Content Include="Scripts\inputmask.extensions.js" />
+    <Content Include="Scripts\inputmask.js" />
+    <Content Include="Scripts\inputmask.numeric.extensions.js" />
+    <Content Include="Scripts\inputmask.phone.extensions.js" />
+    <Content Include="Scripts\inputmask.regex.extensions.js" />
     <Content Include="Scripts\jquery-2.2.3.js" />
     <Content Include="Scripts\jquery-2.2.3.min.js" />
     <Content Include="Scripts\jquery-2.2.3.min.map" />
@@ -1441,17 +1455,21 @@
     <Content Include="Scripts\jquery-upload\vendor\jquery.ui.widget.js" />
     <Content Include="Scripts\jquery-upload\vendor\load-image.all.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.cslider.js" />
+    <Content Include="Scripts\jquery.dataTables.js" />
+    <Content Include="Scripts\jquery.dataTables.min.js" />
+    <Content Include="Scripts\jquery.inputmask.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
-    <Content Include="Scripts\maxImage\jquery.cycle.all.js" />
-    <Content Include="Scripts\maxImage\jquery.cycle.all.min.js" />
-    <Content Include="Scripts\maxImage\jquery.maximage.js" />
-    <Content Include="Scripts\maxImage\jquery.maximage.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\owl.carousel.js" />
+    <Content Include="Scripts\owl.carousel.min.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\slick.js" />
+    <Content Include="Scripts\slick.min.js" />
     <Content Include="Scripts\slippry.min.js" />
     <Content Include="Scripts\tinymce\jquery.tinymce.min.js" />
     <Content Include="Scripts\tinymce\license.txt" />
